# clarification-guided-reward-learning

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
archive/: ARCHIVE_CONTENTS.md
archive/utility_scripts/: image_border_generator.py  preference_learning_interaction.py
archive/version2/: holding_capable_mdp_guide.md  holding_capable_preference_mdp.py
archive/version3/: tree_structured_mdp_documentation.md  tree_structured_preference_mdp.py
archive/version4/: one_shot_placement_documentation.md  one_shot_placement_mdp.py
docs/: reproducibility.md  research-artifacts.md
docs/figures/system-overview/: contract.md  manifest.json
examples/: reference-trace.json
scripts/: render_public_figures.py
source-code/archive/: add_red_boarder_image.py  interaction.py
source-code/archive/utility_scripts/: preference_learning_interaction.py
source-code/src/: interaction_with_feature_clarifications.py  multi_object_custom_mdp_v5.py
src/: USAGE_GUIDE.md  clarification_guided_interaction.py  interaction_with_feature_clarifications.py  multi_object_custom_mdp_v5.py  multi_object_mdp.py
src/clarification_reward_learning/: __init__.py  cli.py  inference.py  models.py  simulation.py  visualization.py
src/utils/: __init__.py  console.py
tests/: test_beliefs.py  test_gridworld.py  test_inference.py  test_simulation.py  test_visualization.py
(+12 files in other folders)
