[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "clarification-reward-learning"
version = "1.1.0"
description = "Reference simulation for learning reward hypotheses from state corrections and feature clarification."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ethan Villalovoz" }]
dependencies = [
  "matplotlib>=3.9,<4",
  "numpy>=2,<3",
  "pillow>=11,<13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
clarification-reward-demo = "clarification_reward_learning.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
